# VersaPy

./: .gitignore  README.md
cli/: LICENSE.md  README.md  REAMDE.md  index.js  package-lock.json  package.json  utils.js
cli/src/utils/: python.utils.js  template.utils.js
cli/templates/: main.py
cli/templates/frontend/: README.md  vite-gitignore
cli/templates/frontend/vite-lit/: index.html  vite.config.js
cli/templates/frontend/vite-lit-ts/: index.html  vite.config.ts
cli/templates/frontend/vite-preact/: index.html  vite.config.js
cli/templates/frontend/vite-preact-ts/: index.html  vite.config.ts
cli/templates/frontend/vite-qwik/: index.html  vite.config.js
cli/templates/frontend/vite-qwik-ts/: index.html  vite.config.ts
cli/templates/frontend/vite-react/: index.html  vite.config.js
cli/templates/frontend/vite-react-ts/: vite.config.ts
cli/templates/frontend/vite-solid/: index.html  vite.config.js
cli/templates/frontend/vite-solid-ts/: index.html  vite.config.ts
core/versapy/: config.py  main.py
docs/api/: events_flags.md
docs/examples/: get_started.md
js-module/: LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
js-module/api/: index.d.ts  index.js
js-module/scripts/: versapy-dev.js
js-module/src/api/: index.d.ts  index.ts
js-module/src/scripts/: versapy-dev.js
js-module/src/utils/: config.d.ts  config.ts
js-module/utils/: config.js
python-module/: pyproject.toml
python-module/versapy/: __init__.py  config.py  main.py
python-module/versapy/src/: config.py
python-module/versapy/src/api/: event.py
python-module/versapy/src/services/: storage.py
(+29 files in other folders)
